<resources>
    <string name="app_name">BiodataDiri</string>
    <string name="keinginan">Menjadi Desainer UI UX</string>
    <string name="Nama">Ahmadun Na\'il</string>
    <string name="TempatTanggalLahir">Kediri, 06 Juli 2004</string>
    <string name="Alamat">Tembarak, Kertosono, Nganjuk</string>
    <string name="NoHp">082331652310</string>
    <string name="Hobi">Mendesain aplikasi</string>
</resources>